--- a/TechiesMoneyExchange.Core/TechiesMoneyExchange.Core.csproj
+++ b/TechiesMoneyExchange.Core/TechiesMoneyExchange.Core.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Polly" Version="7.2.3" />
 	  <PackageReference Include="PropertyChanged.Fody" Version="3.4.0" />
 	</ItemGroup>
 
