--- a/TechiesMoneyExchange.Tests/TechiesMoneyExchange.Tests.csproj
+++ b/TechiesMoneyExchange.Tests/TechiesMoneyExchange.Tests.csproj
@@ -9,6 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-pre4" />
 		<PackageReference Include="FakeItEasy" Version="7.3.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
 		<PackageReference Include="xunit" Version="2.4.1" />
