--- a/TechiesMoneyExchange/TechiesMoneyExchange.csproj
+++ b/TechiesMoneyExchange/TechiesMoneyExchange.csproj
@@ -63,8 +63,8 @@
 	</ItemGroup>
 
 	<ItemGroup>	  
-	  <PackageReference Include="DryIoc.dll" Version="4.8.6" />	  
-	  <PackageReference Include="Xamarin.CommunityToolkit.MauiCompat" Version="1.3.2" />
+	  <PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-pre4" />	  
+	  <PackageReference Include="DryIoc.dll" Version="4.8.6" />
 	</ItemGroup>
 
 	<ItemGroup>
